<resources>
    <string name="app_name">Hello Zupper</string>
    <string name="description_image_splash">Imagem de fundo azul marinho com vários pontos banco e Escrito na frente Hello Zuuper e uma mão acenando</string>
    <string name="e_mail">E-mail</string>
    <string name="entrar">ENTRAR</string>
    <string name="senha">Senha</string>
    <string name="ou">ou</string>
    <string name="novo_por_aqui">É novo por aqui?</string>
    <string name="cadastre_se"><u>Cadastre-se</u></string>
    <string name="seu_nome">Seu nome</string>
    <string name="salvar">SALVAR</string>
    <string name="ja_tem_uma_conta">Já tem uma conta?</string>
    <string name="faca_o_login"><u>Faça o login</u></string>
    <string name="email_cadastrado">campo de coloca o seu email cadastrado</string>
    <string name="name_zenity">Zenity</string>
    <string name="title_text">ÚLTIMA CHAMA - PERSONA</string>
    <string name="hora_text">13:45</string>
    <string name="news_text">Chegamos no último dia do Persona!! Claro que você já preencheu, né?</string>
    <string name="bookmark">Bookmark de mensagem lida.</string>
    <string name="criar_uma_conta">Criar uma conta</string>
    <string name="search">Search</string>
    <string name="nosso_dna_text">Nosso DNA</string>
    <string name="benefits_text">Benefícios</string>
    <string name="programs_text">Programas</string>
    <string name="feed_text">Feed</string>
    <string name="cv_check">Check verde</string>
    <string name="benefit_description">Descrição do benefício aqui. Segunda linha da desc</string>
    <string name="description_image_home">Imagem com um fundo verde e dentro dele tem o símbolo do whatsapp e uma frase escrito, fale com o tio CAZ.</string>
    <string name="sem_conexao_a_internet">Sem conexão a internet</string>
    <string name="descricao_imagem">Um desenho de uma mulher sentado em um foguete, segurando uma bandeira verde com o simbolo da zup .</string>
    <string name="vai_que_da">Vai que dá, confia!</string>
    <string name="descricao_vai_que_da">Confiamos na inteligência coletiva ao discutir problemas em grupo, focamos em qual a melhor forma de resolvê-lo e então vamos em frente.</string>
    <string name="text_catalisa">Catalisa</string>
    <string name="orange_talents_text">Orange Talents</string>
    <string name="zupper_aprendiz_text">Zupper Aprendiz</string>
    <string name="estrela_fora_da_caixa_text">Estrela fora da Caixa</string>
    <string name="text_detail_programs">Programa de formação profissional em tecnologia para pessoas em situação de vulnerabilidade social de renda com contratação desde o 1º dia. Afinal, onde tem gente, tem talento!</string>
    <string name="description_image_detail_programs">Imagem de uma caixa aberta com várias estrelas saindo de dentro.</string>
    <string name="tv_description_one">Descrição1</string>
    <string name="tv_description_two">Descrição2</string>
    <string name="tv_description_three">Descrição3</string>
    <string name="tv_description_four">Descrição4</string>
    <string name="tv_description_five">Descrição5</string>
    <string name="tv_description_six">Descrição6</string>
    <string name="exit">Exit</string>
    <string name="Project">Projetos</string>
    <string name="em_breve">Em breve,</string>
    <string name="novidades">novidades!</string>
</resources>