<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    android:backgroundTint="#AAFFFFFF"
    app:cardCornerRadius="@dimen/margin_12">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8">

        <TextView
            android:id="@+id/tvSenderFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/size_12"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name_zenity" />

        <TextView
            android:id="@+id/tvDateFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="224dp"
            android:textSize="@dimen/size_12"
            app:layout_constraintBottom_toBottomOf="@+id/tvSenderFeed"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="10/08/2022" />

        <TextView
            android:id="@+id/tvTimeFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="@dimen/size_12"
            app:layout_constraintEnd_toStartOf="@+id/ivReadNews"
            app:layout_constraintStart_toEndOf="@+id/tvDateFeed"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hora_text" />

        <TextView
            android:id="@+id/tvTitleFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_48"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvTimeFeed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateFeed"
            tools:text="@string/title_text" />

        <TextView
            android:id="@+id/tvContentFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            tools:text="@string/news_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitleFeed" />

        <ImageView
            android:id="@+id/ivReadNews"
            android:layout_width="@dimen/margin_24"
            android:layout_height="@dimen/margin_24"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/bookmark" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>