<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_world">

    <ImageView
        android:id="@+id/ivCheckOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/cv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescriptionOne" />

    <ImageView
        android:id="@+id/ivCheckTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/cv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescriptionTwo" />

    <ImageView
        android:id="@+id/ivCheckThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/cv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescriptionThree" />

    <ImageView
        android:id="@+id/ivCheckFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/cv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescriptionFour" />

    <ImageView
        android:id="@+id/ivCheckFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/cv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescriptionFive" />

    <ImageView
        android:id="@+id/ivCheckSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/cv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescriptionSix" />

    <TextView
        android:id="@+id/tvDescriptionOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/tv_description_one"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCheckOne"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/tv_description_two"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCheckTwo"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionOne" />

    <TextView
        android:id="@+id/tvDescriptionThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/tv_description_three"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCheckThree"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTwo" />

    <TextView
        android:id="@+id/tvDescriptionFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/tv_description_four"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCheckFour"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionThree" />

    <TextView
        android:id="@+id/tvDescriptionFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/tv_description_five"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCheckFive"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionFour" />

    <TextView
        android:id="@+id/tvDescriptionSix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/tv_description_six"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCheckSix"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionFive" />

</androidx.constraintlayout.widget.ConstraintLayout>